--- a/website/newsletter/231/index.mdx
+++ b/website/newsletter/231/index.mdx
@@ -3,18 +3,15 @@ slug: /231
 title: "This Week In React #231: React Labs, Compiler, React Router, Next.js, TanStack Query, c15t, RTK, Base UI | Legend List, FlashList, Versioning, Metro, ExecuTorch, Brownfield, Expo Router | TC39, Surveys, Rspack, tsdown"
 authors: [matthieugicquel, cyrilbo]
 date: 04-23-2025
-unlisted: true
 ---
 
 Hi everyone!
 
 Cyril and Matthieu from [Theodo Apps](https://apps.theodo.com/en?utm_source=thisweekinreact) here 👋, standing in for Seb to bring you the latest news from the React and React Native worlds.
 
-This week, the React Compiler is in RC (have you enabled it yet?) and the React team has a special announcement for you.
+This week we have two exciting blog posts for the React team, and a special guest from the React core team has a message for you all!
 
 We've also been reading a quite a few interesting blog posts from the "official" blogs and from the community.
-
-<Todo />
 
 <!-- truncate -->
 
