--- a/website/newsletter/231/index.mdx
+++ b/website/newsletter/231/index.mdx
@@ -42,7 +42,7 @@ And that’s just the beginning. With Convex, you can:
 
 ---
 
-## 📣 From the React team
+## 📣 From the React team {#react-core-team}
 
 [![React Labs: View Transitions, Activity, and more](/emails/issues/231/labs.jpg)](https://react.dev/blog/2025/04/23/react-labs-view-transitions-activity-and-more)
 
