--- a/website/newsletter/231/index.mdx
+++ b/website/newsletter/231/index.mdx
@@ -118,7 +118,7 @@ With Semaphor, your data team can ship insights independently. No code changes, 
 Making long lists performant is a hard problem, and React Native’s old architecture wasn’t making it any easier with it’s asynchronous layout computation. We remember Margelo abandoning their `WishList` project.
 Legend List is now in version 1.0, and promises to be even faster than `FlashList`, all the while handling the "hard cases": bidirectional infinite lists, varying item sizes… And it's compatible with the old arch (though less performant and with possible glitches).
 
-As Seb mentioned last week, there’s also a v2 of `FlashList` in the works, which should be easier to use (no need to specify estimatedItemSize for instance).
+As Seb mentioned last week, there’s also a [v2 of `FlashList`](https://github.com/Shopify/flash-list/tree/new-rlv-prototype) in the works, which should be easier to use (no need to specify estimatedItemSize for instance).
 
 Thankfully, all those copy the API of `FlatList` so it’s easy to switch back and forth 🙂.
 
