--- a/website/newsletter/231/index.mdx
+++ b/website/newsletter/231/index.mdx
@@ -9,9 +9,9 @@ Hi everyone!
 
 Cyril and Matthieu from [Theodo Apps](https://apps.theodo.com/en?utm_source=thisweekinreact) here 👋, standing in for Seb to bring you the latest news from the React and React Native worlds.
 
-This week we have two exciting blog posts for the React team, and a special guest from the React core team has a message for you all!
+This week, we have two exciting blog posts for the React team, and a special guest from the React core team has a message for you all!
 
-We've also been reading a quite a few interesting blog posts from the "official" blogs and from the community.
+We've also been reading quite a few interesting blog posts from the "official" blogs and from the community.
 
 <!-- truncate -->
 
