--- a/website/newsletter/232/index.mdx
+++ b/website/newsletter/232/index.mdx
@@ -10,11 +10,9 @@ Hi everyone!
 
 <Todo />
 
-*   🗓️ [StrapiConf](https://conf.strapi.io/?utm_source=thisweekinreact) - 🇫🇷 Paris - 13 May. Last call to join us for a deep dive into the future of headless web development! Get a 10% discount with code "TWIR
-    
-*   🗓️ [App.js Conf](https://appjs.co/?utm_source=thisweekinreact) - 🇵🇱 Kraków - 28-30 May. This is your final chance to join the biggest React Native & Expo event. Secure your seat now and enjoy a 15% discount using code "TWIR"
-    
-*   🗓 [React-Summit](https://reactsummit.com/?utm_source=Newsletter&utm_medium=thisweekinreact) - 🇳🇱 Amsterdam - 13 & 17 June. Check out the full lineup with 60+ speakers at the biggest React conference worldwide! Use promo code TWIR for 10% off tickets.
+- 🗓️ [StrapiConf](https://conf.strapi.io/?utm_source=thisweekinreact) - 🇫🇷 Paris - 13 May. Last call to join us for a deep dive into the future of headless web development! Get a 10% discount with code "TWIR
+- 🗓️ [App.js Conf](https://appjs.co/?utm_source=thisweekinreact) - 🇵🇱 Kraków - 28-30 May. This is your final chance to join the biggest React Native & Expo event. Secure your seat now and enjoy a 15% discount using code "TWIR"
+- 🗓 [React-Summit](https://reactsummit.com/?utm_source=Newsletter&utm_medium=thisweekinreact) - 🇳🇱 Amsterdam - 13 & 17 June. Check out the full lineup with 60+ speakers at the biggest React conference worldwide! Use promo code TWIR for 10% off tickets.
 
 <!-- truncate -->
 
@@ -30,8 +28,8 @@ import Support from "../_support.mdx";
 
 **[Bit: Celebrating 10 Years of Composability](https://bit.cloud/?utm_source=ThisWeekInReact&utm_id=551)**
 
-For a decade, we navigated the complexities of disconnected systems, facing integration headaches and scaling challenges. Our journey to build effectively at scale led us to a breakthrough: [**Harmony**](https://bit.dev/blog/meet-harmony-a-practical-solution-for-composability/).  
-  
+For a decade, we navigated the complexities of disconnected systems, facing integration headaches and scaling challenges. Our journey to build effectively at scale led us to a breakthrough: [**Harmony**](https://bit.dev/blog/meet-harmony-a-practical-solution-for-composability/).
+
 Discover our 10-year story of pioneering composable architecture and how Harmony finally delivered the monolithic simplicity and distributed power we always envisioned, transforming our development from struggle to exponential progress.
 
 [**Read our story**](https://bit.dev/blog/telling-the-bit-story-celebrating-10-years-of-composability/?utm_source=ThisWeekInReact&utm_id=9&utm_medium=newsletter)
@@ -40,9 +38,26 @@ Discover our 10-year story of pioneering composable architecture and how Harmony
 
 ## ⚛️ React {#react}
 
-<Todo />
-
 - 💸 [Convex launched an MCP Server](https://convex.link/thisweekmcp)
+- 🔐 [React Router vulnerabilities and v7.5.2 fixes](https://github.com/remix-run/react-router/blob/main/CHANGELOG.md#v752): React Router v7 has 2 important security vulnerabilities that could lead to DOS and XSS attacks. They have been fixed in the latest v7.5.2 release. Various cloud providers have deployed a mitigation already (Vercel, Netlify, Cloudflare), but it remains useful to upgrade.
+- 👀 [Next.js Docs PR \- Remove Vercel mentions](https://github.com/vercel/next.js/pull/78557): The Next.js docs should now be less biased toward Vercel, and include its competitors more fairly. Personally, I think there's nothing wrong with offering your OSS software to the community and using it as a marketing vector for your paid offer (this is how many OSS projects become sustainable). Even for a larger company like Vercel, it's fair play to do that, but probably necessary to restore the broken trust with some of you.. A reminder that Vercel is not “taking over” the React team, and various client-side-only React Labs features announced last week are [implemented by Vercel employees](https://bsky.app/profile/ricky.fm/post/3lnvyuennss2b) (such as `<ViewTransition>`).
+- 👀 [Vite RSC Plan](https://github.com/hi-ogawa/vite-plugins/issues/748): A Vite contributor is [taking over](https://github.com/facebook/react/pull/31768#issuecomment-2823466684) the development of an upcoming `react-server-dom-vite` package. Many integration PRs have been sent to frameworks like Waku or RedwoodSDK.
+- 📜 [What Does "use client" Do?](https://overreacted.io/what-does-use-client-do/): Dan Abramov explains RSCs have no API surfaces. The directives are module system features that open doors between 2 worlds and could even make sense beyond React. Speaking of Dan, he just [re-launched his YouTube channel](https://www.youtube.com/@overreacted-io), in case you want him to walk you through his blog posts.
+- 📜 [You can serialize a promise in React](https://twofoldframework.com/blog/you-can-serialize-a-promise-in-react): A great interactive article that explains how React is able to forward a Promise from the server to the client through a stream. To do so, it re-creates a tiny version of this mechanism.
+- 📜 [React Internals: Which useEffect runs first?](https://frontendmasters.com/blog/react-internals-which-useeffect-runs-first/): A good reminder that `useEffect` callbacks run bottom-up, from the deepest child to the root (unless you use `<Activity>,` but that’s a story for another time 🙈).
+- 📜 [Concurrent Optimistic Updates in React Query](https://tkdodo.eu/blog/concurrent-optimistic-updates-in-react-query): Dominik shares interesting patterns to avoid displaying an inconsistent UI when using React Query with concurrent mutations and optimistic updates. Tip: olly call `invalidateQueries()` when there’s a single in-flight mutation.
+- 📜 [Parents & Owners in React: Context Providers](https://julesblom.com/writing/parent-owners-context): Explains the difference between parent and owner components. By restructuring the owner tree without changing the parent tree, we create more targeted “units of update”.
+- 📜 [From Next.js to Astro: A Page Size Comparison](https://alan.norbauer.com/articles/astro-vs-nextjs-page-size/): A quite fair numbers comparison after porting a small static Next.js site to Astro, reducing bundle size.
+- 📜 [Per-Route Documents in RedwoodSDK: Total Control Over Your HTML](https://rwsdk.com/blog/redwoodsdk-multiple-documents)
+- 📜 [React-admin With Shadcn UI](https://marmelab.com/blog/2025/04/23/react-admin-with-shadcn.html)
+- 📦 [React MCP Server (experimental)](https://github.com/facebook/react/tree/main/compiler/packages/react-mcp-server): It’s in the React repo, but for now, it’s [just a one-person fun experiment by Lauren](https://github.com/facebook/react/pull/32859) (React Compiler team).
+- 📦 [Radix UI 1.3 \- OneTimePasswordField](https://www.radix-ui.com/primitives/docs/overview/releases#april-17-2025): In case you missed it (we did\!), there’s now a `radix-ui` package to consolidate all Radix primitives under a single roof (instead of `@radix-ui/*` imports). It’s likely that `shadcn/ui` will [adopt it and provide a codemod](https://github.com/shadcn-ui/ui/pull/6868#issuecomment-2718219342) in the future.
+- 📦 [Storybook 9 beta](https://storybook.js.org/blog/storybook-9-beta/): The new version is now feature complete, with a good focus on testing (components, interaction, accessibility, visual tests). The tag-based organization should help improve UX. Also includes first-class support for React Native Web.
+- 📦 [Lexical 0.31 \- Extensible text editor with React bindings](https://github.com/facebook/lexical/releases/tag/v0.31.0)
+- 📦 [Frimousse \- A lightweight, unstyled, and composable emoji picker for React.](https://frimousse.liveblocks.io/)
+- 🎥 [Theo \- React just got way cooler](https://www.youtube.com/watch?v=-dePNpdd44M)
+- 🎥 [Jack Herrington \- Better-Auth: Headless Authentication for Your TanStack Start App](https://www.youtube.com/watch?v=Atev8Nxpw7c)
+- 🎙️ [This Month in React \- React 19.1, Next.js 15.3, RN v0.79, RTK, React Aria](https://creators.spotify.com/pod/profile/reactiflux/episodes/TMiR-2025-04-React-19-1-helps-debug-owner-stacks-e324h0g)
 
 <SubscribeFormEmbed placement="middle" />
 
