--- a/website/newsletter/232/index.mdx
+++ b/website/newsletter/232/index.mdx
@@ -50,6 +50,7 @@ Start composing your existing code [**today**](https://bit.dev/?utm_source=ThisW
 - 📜 [From Next.js to Astro: A Page Size Comparison](https://alan.norbauer.com/articles/astro-vs-nextjs-page-size/): A quite fair numbers comparison after porting a small static Next.js site to Astro, reducing bundle size.
 - 📜 [Per-Route Documents in RedwoodSDK: Total Control Over Your HTML](https://rwsdk.com/blog/redwoodsdk-multiple-documents)
 - 📜 [React-admin With Shadcn UI](https://marmelab.com/blog/2025/04/23/react-admin-with-shadcn.html)
+- 💸 [Tolgee React - Translate Apps with Tolgee and Forget About Infinite Spreadsheets of Text](https://tolgee.io/apps-integrations/react)
 - 📦 [React MCP Server (experimental)](https://github.com/facebook/react/tree/main/compiler/packages/react-mcp-server): It’s in the React repo, but for now, it’s [just a one-person fun experiment by Lauren](https://github.com/facebook/react/pull/32859) (React Compiler team).
 - 📦 [Radix UI 1.3 \- OneTimePasswordField](https://www.radix-ui.com/primitives/docs/overview/releases#april-17-2025): In case you missed it (we did\!), there’s now a `radix-ui` package to consolidate all Radix primitives under a single roof (instead of `@radix-ui/*` imports). It’s likely that `shadcn/ui` will [adopt it and provide a codemod](https://github.com/shadcn-ui/ui/pull/6868#issuecomment-2718219342) in the future.
 - 📦 [Storybook 9 beta](https://storybook.js.org/blog/storybook-9-beta/): The new version is now feature complete, with a good focus on testing (components, interaction, accessibility, visual tests). The tag-based organization should help improve UX. Also includes first-class support for React Native Web.
@@ -65,11 +66,11 @@ Start composing your existing code [**today**](https://bit.dev/?utm_source=ThisW
 
 ## 💸 Sponsor {#sponsor2}
 
-[![Meet @clerk/agent-toolkit](/emails/issues/227/clerk.jpg)](https://go.clerk.com/ovPb3z0)
+[![How to take Clerk to Production](/emails/issues/232/clerk.jpg)](https://go.clerk.com/fpzcK5F)
 
-**[Meet @clerk/agent-toolkit](https://go.clerk.com/ovPb3z0)**
+**[How to take Clerk to Production](https://go.clerk.com/ovPb3z0)**
 
-Clerk's new experimental package for using Clerk in your AI agent workflows. Manage users, orgs, and more with Vercel AI SDK + LangChain support. Try it now: `npm install @clerk/agent-toolkit`
+Step-by-step guide for developers to launch a Clerk app in a production environment with a custom domain, OAuth credentials, and secure DNS configuration.
 
 ---
 
@@ -77,7 +78,7 @@ Clerk's new experimental package for using Clerk in your AI agent workflows. Man
 
 <Todo />
 
-- 💸 [Introducing native Passkeys support for Expo - Unlock one of the fastest growing auth strategies for your next project](https://go.clerk.com/I4o9cHy)
+- 💸 [Build a Modern Multi-User Chat App with React Native](https://go.clerk.com/Y0ne425)
 
 ---
 
