--- a/website/newsletter/232/index.mdx
+++ b/website/newsletter/232/index.mdx
@@ -108,14 +108,22 @@ The Callstack project is now open source. It’s built as a drop-in replacement 
 
 ## 🔀 Other {#other}
 
-<Todo />
+- 📣 [Node.js 18 reaches End-of-Life today](https://nodejs.org/en/about/previous-releases): This Node.js version will no longer receive security updates, and it’s recommended to upgrade to v20 or v22.
+- 👀 [Asynchronous Svelte](https://github.com/sveltejs/svelte/discussions/15845): Svelte has a new async experimental mode, and this doc explains how it works. The “Forks” section reminds a bit of Concurrent React, transitions, and its upcoming `<Activity>` component.
+- 👀 [Firefox enabling View Transitions in Firefox 139 Nightly builds](https://www.mozilla.org/en-US/firefox/140.0a1/releasenotes/#note-790833): A positive signal from the only remaining browser to not have this feature. Good timing for React and its upcoming `<ViewTransition>` component?
+- 📜 [Giving V8 a Heads-Up: Faster JavaScript Startup with Explicit Compile Hints](https://v8.dev/blog/explicit-compile-hints): A new feature coming with Chrome 136 allows faster web page loading by annotating your files/functions with magic comments to tell V8 to compile the JS code eagerly, showing promising results on experiments. Maybe it will be useful to speed up React hydration or even Node.js programs?
+- 📜 [Categorize Your Dependencies](https://antfu.me/posts/categorize-deps): Using pnpm catalogs.
+- 📜 [How Node.js Works Behind the Scenes](https://www.deepintodev.com/blog/how-nodejs-works-behind-the-scenes)
+- 📜 [A Decade of SolidJS](https://dev.to/this-is-learning/a-decade-of-solidjs-32f4)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+[![alt](/emails/issues/232/meme0.jpg)](https://www.linkedin.com/posts/yangshun_react-vue-svelte-activity-7313404647040249856-uNQi/)
 
-[![alt](/emails/issues/215/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![alt](/emails/issues/232/meme.jpg)](https://www.reddit.com/r/reactnative/comments/1jxoppk/is_this_you/)
+
+[![alt](/emails/issues/232/meme2.jpg)](https://x.com/jarredsumner/status/1916535123568140571)
 
 See ya! 👋
