--- a/website/newsletter/232/index.mdx
+++ b/website/newsletter/232/index.mdx
@@ -1,12 +1,15 @@
 ---
 slug: /232
-title: "This Week In React #232: React Router, Next.js, Vite, use client, MCP"
+title: "This Week In React #232: React Router, Next.js, Radix, Vite, MCP, Storybook | Entreprise Framework, Shopify, Expo, Brownfield, WebGPU, AI, Release-It | Node.js, Async Svelte, Compile Hints, View Transitions"
 authors: [slorber]
 date: 04-25-2025
-unlisted: true
 ---
 
 Hi everyone!
+
+I hope you've recovered from last week's React Labs news 🔥. This week is of course quieter, but still interesting, with great community articles, weak signals to look at, and a few releases.
+
+Make sure to upgrade your React Router v7 app, and bump to Node.js >= 18!
 
 <!-- truncate -->
 
