--- a/website/newsletter/232/index.mdx
+++ b/website/newsletter/232/index.mdx
@@ -54,7 +54,7 @@ Start composing your existing code [**today**](https://bit.dev/?utm_source=ThisW
 - 📦 [Radix UI 1.3 \- OneTimePasswordField](https://www.radix-ui.com/primitives/docs/overview/releases#april-17-2025): In case you missed it (we did\!), there’s now a `radix-ui` package to consolidate all Radix primitives under a single roof (instead of `@radix-ui/*` imports). It’s likely that `shadcn/ui` will [adopt it and provide a codemod](https://github.com/shadcn-ui/ui/pull/6868#issuecomment-2718219342) in the future.
 - 📦 [Storybook 9 beta](https://storybook.js.org/blog/storybook-9-beta/): The new version is now feature complete, with a good focus on testing (components, interaction, accessibility, visual tests). The tag-based organization should help improve UX. Also includes first-class support for React Native Web.
 - 📦 [Lexical 0.31 \- Extensible text editor with React bindings](https://github.com/facebook/lexical/releases/tag/v0.31.0)
-- 📦 [Frimousse \- A lightweight, unstyled, and composable emoji picker for React.](https://frimousse.liveblocks.io/)
+- 📦 [Frimousse \- A lightweight, unstyled, and composable emoji picker for React](https://frimousse.liveblocks.io/)
 - 🎥 [Theo \- React just got way cooler](https://www.youtube.com/watch?v=-dePNpdd44M)
 - 🎥 [Jack Herrington \- Better-Auth: Headless Authentication for Your TanStack Start App](https://www.youtube.com/watch?v=Atev8Nxpw7c)
 - 🎙️ [This Month in React \- React 19.1, Next.js 15.3, RN v0.79, RTK, React Aria](https://creators.spotify.com/pod/profile/reactiflux/episodes/TMiR-2025-04-React-19-1-helps-debug-owner-stacks-e324h0g)
