--- a/website/newsletter/232/index.mdx
+++ b/website/newsletter/232/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /232
-title: "This Week In React #232: React Router, Next.js, Radix, Vite, MCP, Storybook | Entreprise Framework, Shopify, Expo, Brownfield, WebGPU, AI, Release-It | Node.js, Async Svelte, Compile Hints, View Transitions"
+title: "This Week In React #232: React Router, Next.js, Radix, Vite, MCP, Storybook | Entreprise Framework, Shopify, Brownfield, WebGPU, AI, Release-It, Expo | Node.js, Async Svelte, Compile Hints, View Transitions"
 authors: [slorber]
 date: 04-25-2025
 ---
