--- a/website/newsletter/233/index.mdx
+++ b/website/newsletter/233/index.mdx
@@ -20,15 +20,15 @@ import Support from "../_support.mdx";
 
 ## 💸 Sponsor {#sponsor1}
 
-[![Cut React Code Review Time & Bugs in Half](/emails/issues/233/coderabbit.jpg)](https://www.coderabbit.ai?utm_source=newsletter&utm_medium=email&utm_campaign=this_week_in_react_mar25)
+[![Cut React Code Review Time & Bugs in Half](/emails/issues/233/coderabbit.jpg)](https://coderabbit.link/this-week-in-react-7may-2025)
 
-**[Cut React Code Review Time & Bugs in Half](https://www.coderabbit.ai?utm_source=newsletter&utm_medium=email&utm_campaign=this_week_in_react_mar25)**
+**[Cut React Code Review Time & Bugs in Half](https://coderabbit.link/this-week-in-react-7may-2025)**
 
-Code reviews are critical but time-consuming. CodeRabbit acts as your AI co-pilot, providing instant Code review comments and potential impacts of every pull request.   
-  
+Code reviews are critical but time-consuming. CodeRabbit acts as your AI co-pilot, providing instant Code review comments and potential impacts of every pull request. 
+
 Beyond just flagging issues, CodeRabbit provides one-click fix suggestions and lets you define custom code quality rules using AST Grep patterns, catching subtle issues that traditional static analysis tools might miss.
 
-CodeRabbit has so far reviewed more than 5 million PRs, installed on 1 million repositories, and used by 50 thousand Open-source projects. CodeRabbit is free for all open-source repo's. [Get started today!](https://www.coderabbit.ai?utm_source=newsletter&utm_medium=email&utm_campaign=this_week_in_react_mar25)
+CodeRabbit has so far reviewed more than 5 million PRs, installed on 1 million repositories, and used by 50 thousand Open-source projects. CodeRabbit is free for all open-source repo's. [Get started today!](https://coderabbit.link/this-week-in-react-7may-2025)
 
 ---
 
@@ -52,17 +52,12 @@ CodeRabbit has so far reviewed more than 5 million PRs, installed on 1 million r
 
 Speed up your work now! Tolgee helps with:
 
-*   Delegating translation to other team members - save the developer's time!
-    
-*   In-context translation
-    
-*   Click to translate with the browser extension
-    
-*   Get rid of unorganized spreadsheets and JSONs
-    
+- Delegating translation to other team members - save the developer's time!
+- In-context translation
+- Click to translate with the browser extension
+- Get rid of unorganized spreadsheets and JSONs
 
 **No credit card is needed** for the free version, perfect for smaller projects! You can try all the features and integrate it into your project right away to prepare it to meet a global audience.
-
 
 ---
 
