--- a/website/newsletter/233/index.mdx
+++ b/website/newsletter/233/index.mdx
@@ -89,7 +89,9 @@ Speed up your work now! Tolgee helps with:
 
 ## 📱 React-Native {#react-native}
 
-[Expo SDK 53](https://expo.dev/changelog/sdk-53)
+[![Expo SDK 53](/emails/issues/233/expo53.jpg)](https://expo.dev/changelog/sdk-53)
+
+**[Expo SDK 53](https://expo.dev/changelog/sdk-53)**
 
 This is quite an impressive Expo release, with highlights:
 
@@ -113,7 +115,9 @@ See also the [Expo Router v5](https://expo.dev/blog/expo-router-v5) related rele
 
 ---
 
-🎥 [Game On \- Bringing WebGPU to React Native](https://www.youtube.com/watch?v=Axb3hWv0zA8)
+[![Game On - Bringing WebGPU to React Native](/emails/issues/233/skia.jpg)](https://www.youtube.com/watch?v=t9t-VXwIc4I)
+
+**[🎥 Game On \- Bringing WebGPU to React Native](https://www.youtube.com/watch?v=t9t-VXwIc4I)**
 
 In a 37-minute video packed with exciting announcements, William Candillon and guests gave us a glimpse into the future of drawing and animation. Supported by Shopify, he’s bringing modern WebGPU support (Vulkan and Metal) to React Native.
 
