--- a/website/newsletter/233/index.mdx
+++ b/website/newsletter/233/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /233
-title: "This Week In React #233: ..."
+title: "This Week In React #233: RSC, Next.js, Compiler, Unhead, Shadcn, Relay, Mantine | Expo, WebGPU, Skia, Apple fees, Reanimated, Fragment Refs | Node.js, TS, Prisma, Deno, GSAP"
 authors: [slorber]
 date: 05-07-2025
 unlisted: true
@@ -138,7 +138,6 @@ All this work was needed to create a new experimental Skia Graphite backend base
 - 📦 [Nitro Audio Manager \- Nitro module for AVAudioSession/AudioManager APIs](https://github.com/ChristopherGabba/react-native-nitro-audio-manager)
 - 📦 [Expo Build Disk Cache \- A plugin for Expo CLI to improve build time](https://github.com/WookieFPV/expo-build-disk-cache)
 - 📦 [Expo App Template \- Modern, sensible defaults and fast Expo app template](https://github.com/nkzw-tech/expo-app-template)
-- 📦 [React Native 0.80 rc.0](https://github.com/facebook/react-native/releases/tag/v0.80.0-rc.0)
 - 🎥 [Jamon Holmgren \- How to build a Mac app with React Native for macOS](https://www.youtube.com/watch?v=0h-owMCfy5s)
 - 🎥 [React Universe Meetup \- 3 new videos from April: Polygen, File-based router, native feel](https://www.youtube.com/playlist?list=PLZ3MwD-soTTEFaxmATqOTcitPEK5iaz1z)
 - 🎥 [Simon Grimm \- Finally React Native UI Components (Expo 53\)](http://youtube.com/watch?v=kGUrNO8WmCU)
