--- a/website/newsletter/233/index.mdx
+++ b/website/newsletter/233/index.mdx
@@ -3,12 +3,15 @@ slug: /233
 title: "This Week In React #233: RSC, Next.js, Compiler, Unhead, Shadcn, Relay, Mantine | Expo, WebGPU, Skia, Apple fees, Reanimated, Fragment Refs | Node.js, TS, Prisma, Deno, GSAP"
 authors: [slorber]
 date: 05-07-2025
-unlisted: true
 ---
 
 Hi everyone!
 
-<Todo />
+This week we don't have one, but 2 interesting blog posts from Dan Abramov, and various React releases.
+
+I found the mobile news particularly interesting, with Expo 53, Skia Graphite, Reanimated Shared Elements Transitions, and the Apple fees court injunction.
+
+My fellows at ui.dev are also launching the final content of their [react.gg](https://react.gg/?ref=twir) course (30% off now), designed to teach you all the brand-new React 19 concepts from first principles. I got access to review it and can assure you that it's a really playful way to learn React, full of interactive examples, visualizations and pragmatic quizzes.
 
 <!-- truncate -->
 
@@ -34,8 +37,6 @@ CodeRabbit has so far reviewed more than 5 million PRs, installed on 1 million r
 
 ## ⚛️ React {#react}
 
-<Todo />
-
 - 💸 [Product for Engineers - What engineers get wrong about communication](https://go.posthog.com/twir-may7)
 - 👀 [Next.js Docs \- New `runAfterProductionCompile` lifecycle hook](https://nextjs.org/docs/architecture/nextjs-compiler#runafterproductioncompile): Upcoming (unreleased) feature already documented.
 - 💬 [React Compiler oxc plugin](https://github.com/oxc-project/oxc/issues/10048$): Interesting discussions between the React Compiler team and the oxc team to integrate the compiler as an oxc plugin for upcoming usage with Vite and Oxc/Rolldown. The React team suggests making it happen in 2 steps (make it work, then make it fast).
@@ -50,6 +51,7 @@ CodeRabbit has so far reviewed more than 5 million PRs, installed on 1 million r
 - 📜 [How We Fell Out of Love with Next.js and Back in Love with Ruby on Rails & Inertia.js](https://hardcover.app/blog/part-1-how-we-fell-out-of-love-with-next-js-and-back-in-love-with-ruby-on-rails-inertia-js)
 - 📜 [Why Kleinanzeigen.de Picked Astro Over Next.js](https://d13z.dev/blog/07-why-kleinanzeigen-picked-astro-over-nextjs/)
 - 📜 [When You Might Need to Override the Defaults in TanStack Query](https://www.kxlaa.com/articles/when-you-might-need-to-override-the-defaults-in-tanstack-query)
+- 💸 [React.gg - The interactive way to master modern React, including new v19 modules - 30% off during launch week](https://react.gg/?ref=twir)
 - 📦 [Unhead 2.0 \- The full stack \<head\> package for any framework](https://unhead.unjs.io/v2): This framework-agnostic package from the UnJS ecosystem now includes React bindings. This could be a great drop-in alternative to `react-helmet` with React 19 support if the new built-in APIs are not good enough for you (see [my comment here](https://github.com/staylor/react-helmet-async/issues/239#issuecomment-2565685131)).
 - 📦 [Blade \- Build instant web apps with React](https://github.com/ronin-co/blade): A new opinionated React meta-framework with Server Components support, that purposefully doesn’t comply with the RSC spec.
 - 📦 [Relay 19.0 \- `@alias` required on conditional fragments, support React 19](https://relay.dev/blog/2025/04/02/relay-19/)
