--- a/website/newsletter/233/index.mdx
+++ b/website/newsletter/233/index.mdx
@@ -39,7 +39,7 @@ CodeRabbit has so far reviewed more than 5 million PRs, installed on 1 million r
 
 - 💸 [Product for Engineers - What engineers get wrong about communication](https://go.posthog.com/twir-may7)
 - 👀 [Next.js Docs \- New `runAfterProductionCompile` lifecycle hook](https://nextjs.org/docs/architecture/nextjs-compiler#runafterproductioncompile): Upcoming (unreleased) feature already documented.
-- 💬 [React Compiler oxc plugin](https://github.com/oxc-project/oxc/issues/10048$): Interesting discussions between the React Compiler team and the oxc team to integrate the compiler as an oxc plugin for upcoming usage with Vite and Oxc/Rolldown. The React team suggests making it happen in 2 steps (make it work, then make it fast).
+- 💬 [React Compiler oxc plugin](https://github.com/oxc-project/oxc/issues/10048): Interesting discussions between the React Compiler team and the oxc team to integrate the compiler as an oxc plugin for upcoming usage with Vite and Oxc/Rolldown. The React team suggests making it happen in 2 steps (make it work, then make it fast).
 - 🧵 [shadcn introducing the registry MCP \- One command to make any component registry mcp-compatible.](https://threadreaderapp.com/thread/1917597228513853603.html)
 - 📜 [Functional HTML](https://overreacted.io/functional-html/): Dan gradually reinvents the HTML he wants from first principles, leading to an RSC implementation.
 - 📜 [RSC for Astro Developers](https://overreacted.io/rsc-for-astro-developers/): RSC and Astro have 2 remarkably similar mental models, but Dan exposes some interesting subtle differences. RSCs may feel less intuitive at first, but they also solve some of Astro’s limitations.
