--- a/website/newsletter/234/index.mdx
+++ b/website/newsletter/234/index.mdx
@@ -34,9 +34,35 @@ Learn how to identify and fix each of these (and more) in [the latest edition of
 
 ## ⚛️ React {#react}
 
-<Todo />
+[![TanStackDB](/emails/issues/234/tanstackdb.png)](https://github.com/TanStack/db)
+
+**[TanStack DB](https://github.com/TanStack/db)**
+
+A brand-new library from the TanStack team has been introduced in collaboration with ElectricSQL, which brings a lot of exciting features. It gives you a blazing fast query engine, fine-grained reactivity for minimal re-renders, robust transaction primitives and normalized data by default\!
+
+It is built on TanStack Store and is working with and alongside TanStack Query, which extends its capabilities with collections, live queries and optimistic mutations.
 
 - 💸 [Build professional design system in less than a day, using Hope AI, new model by Bit.Cloud](https://bit.cloud/solutions/design-systems?utm_source=ThisWeekInReact&campaign=DesignSystem)
+- 👀 [React PR \- Integrate React RSC with Vite](https://github.com/facebook/react/pull/33152): An implementation of React Server Components support in Vite. There used to be a community proposal in the past but this time it's coming officially from the Vite team.
+- 👀 [React Query RFC \- Unified Imperative Query Methods](https://github.com/TanStack/query/discussions/9135): As the API of TanStack Query grows, the creators proposed to reduce the number of six functions with similar functionality to two unique methods \- `query` and `infiniteQuery`.
+- 📜 [React Hook Factory \- how to create custom hooks programmatically](https://tylur.blog/react-hook-factory/): A clever pattern to reduce boilerplate when setting up a new React Context.
+- 📜 [Dependency Inversion in React: Building Truly Testable Components](https://cekrem.github.io/posts/dependency-inversion-in-react/): Implementing a SOLID principle known from the object-oriented programming to the React world.
+- 📜 [Using OpenAuth with React Router](https://seanpaulcampbell.com/blog/openauth-react-router/): Comprehensive 2-part article explaining how to implement authentication using React Router, OpenAuth and SST.
+- 📜 [Client-Side React Rocks](https://marmelab.com/blog/2025/05/09/client-side-react-rocks.html): On the example of tabular layout the author argues client-side React features like \`useContext\` and \`createPortal\` provide better DX than Server Components.
+- 📜 [Static as a Server](https://overreacted.io/static-as-a-server/): Dan draws parallels between the Astro and built-time React Server Components for creating static sites without a server.
+- 📜 [The Limits of RSC: A Practitioner's Journey](https://www.nirtamir.com/articles/the-limits-of-rsc-a-practitioners-journey): Nir tried to implement infinite scrolling UI using Server Components, but ran into a wall. Spoiler: He used React Query instead.
+- 📜 [How to Build a Custom React Renderer](https://blog.swmansion.com/how-to-build-a-custom-react-renderer-595dc4a9cb1c): Using the `react-reconciler` package with Smelter as an example.
+- 📜 [Control Props: Give Your React Components Superpowers](https://www.epicreact.dev/control-props-give-your-react-components-superpowers-xitiw): Describes a common React pattern used to control state from outside a component. Generally associated with inputs, but often used by UI libraries.
+- 📜 [Patterns for state management with actors in React with XState](https://www.typeonce.dev/article/patterns-for-state-management-with-actors-in-react-with-xstate)
+- 📜 [How To Integrate React Query With AG Grid?](https://scientyficworld.org/how-to-integrate-react-query-with-ag-grid/)
+- 📦 [React Router 7.6 \- new `routeDiscovery` option](https://github.com/remix-run/react-router/blob/main/CHANGELOG.md#v760): New config option introduced granting more control over the Lazy Route Discovery feature.
+- 📦 [Redux Toolkit 2.8 \- Infinite Query Page Params, RN compatibility](https://github.com/reduxjs/redux-toolkit/releases/tag/v2.8.0)  
+  📦 [Parcel 2.15 \- New HTML and SVG to JSX transformer](https://parceljs.org/blog/v2-15-0/)
+- 🎥 [Jack Herrington \- Server Functions Don't Exist (It Matters)](https://www.youtube.com/watch?v=FPJvlhee04E)
+- 🎥 [Lee Robinson \- Multi-tenant SaaS apps with Next.js and Vercel](https://www.youtube.com/watch?v=vVYlCnNjEWA)
+- 🎥 [Epic Web Conf 2025 \- Talks are online](https://www.epicweb.dev/talks)
+- 🎙️ [PodRocket 563 \- JSX over the wire with Dan Abramov](https://podrocket.logrocket.com/jsx-over-the-wire-dan-abramov)
+- 🎙️ [Syntax.fm 901 \- New React & Svelte APIs, RSC Updates, Redwood and Storybook](https://syntax.fm/show/901/js-news-new-react-and-svelte-apis-rsc-updates-redwood-and-storybook)
 
 <SubscribeFormEmbed placement="middle" />
 
