--- a/website/newsletter/234/index.mdx
+++ b/website/newsletter/234/index.mdx
@@ -88,9 +88,30 @@ Enable Billing, drop in `<PricingTable/>` on your `/pricing` page and [start mon
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+[![MS Office uses React Native](/emails/issues/234/microsoft-uses-react-native.png)](https://devblogs.microsoft.com/react-native/2025-05-09-office-modernize/)
+
+**[How Office Is Modernizing Their App Suite's UI using Windows App SDK and React Native](https://devblogs.microsoft.com/react-native/2025-05-09-office-modernize/)**
+
+Chiara Mooney from Microsoft described how they use React Native to implement the newest Copilot features in their flagship MS Office suite used **by 600 million people**.
+
+They are using it in an island architecture which is a pattern embraced in the frontend ecosystem by the hybrid framework Astro.
+
+Interesting to see how RN is used at the highest enterprise level on platforms which aren't Android or iOS.
 
 - 💸 [WithFrame - Pre-Built React Native Templates](https://withfra.me)
+- 🐦 [mrdoob \- Honest question, why would anyone use Flutter instead of React Native?](https://x.com/mrdoob/status/1920861880911884771): Horizon broadening conversation between React Native and Flutter devs
+- 📜 [Expo \- Faster local dev with build cache providers (Experimental)](https://expo.dev/blog/build-cache-providers-in-expo): Reduced prebuild wait time by introducing remote build caching.
+- 📜 [React Native Legal: Zero-Config OSS License Screens for Your App](https://www.callstack.com/blog/react-native-legal-acknowledge-open-source-libraries-in-your-app?utm_campaign=Open_Source&utm_source=twitter&utm_medium=social&utm_content=post_13_05_2025): Recently, The Callstack team has launched React Native Legal \- a zero-config, cross-platform library, that handles license metadata generation and in-app display for you. Learn how not to get lost in reinventing the wheel and see how you can implement your own license list in just a few steps.
+- 📜 [Nightmare on Apple Street](https://byk.im/posts/apple-code-signing-x-platform/): Publishing your app to the App Store from the Linux could be a nightmare. Before you start trying it on your own, learn what are the hops and obstacles of pushing an iOS app from a Linux machine.
+- 📜 [New in Re.Pack 5.1: Preloading Remotes, Runtime Hooks, and Faster Startups](https://www.callstack.com/blog/new-in-re-pack-5-1): This time, Callstack shares with us a few interesting things, coming in the new version of Re.Pack. The release mainly focuses on a better Module Federation 2 support, thanks to the new `prefetchRemote` option, runtime hooks for ScriptManager and more.
+- 📦 [React Native 0.80 RC.1](https://github.com/facebook/react-native/releases/tag/v0.80.0-rc.1): The upcoming version of React Native is now in RC. TypeScript improvements with new [Strict API](https://github.com/react-native-community/discussions-and-proposals/blob/main/proposals/0894-deprecate-subpath-imports.md#parallel-effort-strict-typescript-api), support of radial gradient, React 19.1.
+- 📦 [TanStack Query 5.76 \- DevTools for Expo/React Native](https://github.com/TanStack/query/releases/tag/v5.76.0)
+- 📦 [Radon IDE 1.6 \- React Profiler integration, conditional & expression breakpoints, ​Expo SDK 53](https://github.com/software-mansion/radon-ide/releases/tag/v1.6.0)
+- 📦 [React Native Skia 2.0 \- React 19 and React Native 0.78 minimum are required](https://github.com/Shopify/react-native-skia/releases/tag/v2.0.0)
+- 📦 [Rive React Native 9.3 \- Data Binding support, new useRive() hook, simpler .riv file loading](https://github.com/rive-app/rive-react-native/releases/tag/v9.3.0)
+- 🎥 [Simon Grimm \- React Native AI Apps can't get easier (Expo & Vercel AI SDK)](https://www.youtube.com/watch?v=W9bbVJwCyqo)
+- 🎙️ [React Native Radio 331 \- New Architecture, New Era with Riccardo Cipolleschi](https://infinite.red/react-native-radio/rnr-331-new-architecture-new-era-with-riccardo-cipolleschi)
+- 🎙️ [Rocket Ship 68 \- Expo SDK 53 Highlights, React Native AI, Worklets & No Apple App Store Commissions](https://podcast.galaxies.dev/episodes/068-expo-sdk-53-highlights-react-native-ai-worklets-no-apple-app-store-commissions)
 
 ---
 
